keepout filter, nog niet getest

--- a/wheeltec_robot_nav2/param/wheeltec_param/param_flagship_mec_dl (copy).yaml
+++ b/wheeltec_robot_nav2/param/wheeltec_param/param_flagship_mec_dl (copy).yaml
@@ -30,7 +30,7 @@ amcl:
     save_pose_rate: 0.5
     sigma_hit: 0.02
     tf_broadcast: true
-    transform_tolerance: 0.3
+    transform_tolerance: 0.5
     update_min_a: 0.06
     update_min_d: 0.025
     z_hit: 0.7
@@ -78,7 +78,10 @@ bt_navigator:
     - nav2_clear_costmap_service_bt_node
     - nav2_is_stuck_condition_bt_node
     - nav2_goal_reached_condition_bt_node
-    - nav2_goal_updated_condition_bt_node
+    
+    # Note: this one was removed from modified
+    - nav2_goal_updated_condition_bt_node  
+    
 #    - nav2_globally_updated_goal_condition_bt_node
 #    - nav2_is_path_valid_condition_bt_node
     - nav2_initial_pose_received_condition_bt_node
@@ -97,7 +100,7 @@ bt_navigator:
 #    - nav2_path_expiring_timer_condition
     - nav2_distance_traveled_condition_bt_node
     - nav2_single_trigger_bt_node
-    # - nav2_goal_updated_controller_bt_node
+#    - nav2_goal_updated_controller_bt_node
     - nav2_is_battery_low_condition_bt_node
     - nav2_navigate_through_poses_action_bt_node
     - nav2_navigate_to_pose_action_bt_node
@@ -170,7 +173,6 @@ controller_server:
       sim_time: 1.7
       linear_granularity: 0.05
       angular_granularity: 0.025
-      #============================================== from 0.2 --> 0.5
       transform_tolerance: 0.5
       xy_goal_tolerance: 0.25
       trans_stopped_velocity: 0.25
@@ -202,17 +204,11 @@ local_costmap:
       use_sim_time: False
       rolling_window: true
       width: 3
-      height: 3
+      height: 3 
       resolution: 0.05
-      footprint: "[ [-0.290, -0.313], [-0.290, 0.313],[0.290,0.313],[0.290, -0.313] ]"
+      #robot_radius: 0.20
+      footprint: "[ [-0.288, -0.303], [-0.288, 0.303],[0.288,0.303],[0.288, -0.303] ]"
       plugins: ["voxel_layer", "inflation_layer"]
-      
-      filters: ["keepout_filter"]
-      keepout_filter:
-      	plugin: ["nav2_costmap_2d::KeepoutFilter"]
-      	enabled: True
-      	filter_info_topic: "/costmap_filter_info"
-      	transform_tolerance: 0.1
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
@@ -254,18 +250,11 @@ global_costmap:
       global_frame: map
       robot_base_frame: base_footprint
       use_sim_time: False
-      footprint: "[ [-0.290, -0.313], [-0.290, 0.313],[0.290,0.313],[0.290, -0.313] ]"
+      #robot_radius: 0.20
+      footprint: "[ [-0.288, -0.303], [-0.288, 0.303],[0.288,0.303],[0.288, -0.303] ]"
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer", "KeepoutFilter"]
-      
-      filters: ["keepout_filter"]
-      keepout_filter: 
-      	plugin: "nav2_costmap_2d::KeepoutFilter"
-      	enabled: True
-      	filter_info_topic: "/costmap_filter_info"
-      	transform_tolerance: 0.1 
-      	
+      plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
